# roboticArmPingPong

./: OpenDisplayAndShowVideo.cpp  README.md  Tracking - Copy.cpp  ballTracking.cpp  colourObjectDetect.cpp  dfl-benchmark-inference.ipynb  my_controller1.cpp  objectPrediction.py  quadraticEqnObject.cpp  trackingg9.cpp  trackingreg.cpp  vision.py  yolov5.cpp
CAD/: README
CAD/Draft/: Final v2.step  base v10.step  connector1 v8.step  endEffector v6.step  link2 v10.step  link3 v5.step  link4 v6.step
CAD/Motor/: DS3225MG Servo 25Kg 4.8-6.8V.STEP  FT5335M Servo_Motor.STEP  MG995 Servo With Horn.step  MG995 Servo.step  Metal Servo Horn.step
DummyRobo/: CMakeLists.txt  README  package.xml
DummyRobo/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
DummyRobo/meshes/: Arm1_v5_1.stl  Arm2_v2_1.stl  Arm3_v3_1.stl  Bracket1_v6_1.stl  Bracket2_v4_1.stl  End_effector_v3_1.stl  Link1_v2_1 (1).stl  base_link.stl
DummyRobo/urdf/: Final_Assembly.gazebo  Final_Assembly.trans  Final_Assembly.xacro  materials.xacro
Implementation/: RAGO_ServoControl.cpp  servo.cpp  servo1.cpp
Implementation/src/: ObjectTracking.cpp  main.cpp  (+2 more)
Kinematics-Eqn/: Forward-3dof.py  ForwardKinematics.m  InverseKinematic.cpp  InverseKinematics.m  trajectory.cpp  trajectory.m
document/: RealTime Embedded Programming.docx
simulation/: version1.cpp  version2.cpp  version2_1.cpp  version2_2.cpp
src/: CMakeLists.txt  dependency.sh  main.cpp  mapping.cpp  mapping.h  robot_arm.cpp  robot_arm.h  servo_func.cpp  servo_func.h  trajectory_predictor.cpp  trajectory_predictor.h
(+25 files in other folders)
